Added graph.js and style.css for graph function and styling

--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -1,6 +1,7 @@
 doctype
 html(class=".no-js")
   head
+    link(rel="include style.css", href="static/css/style.css")
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title
@@ -9,3 +10,5 @@ html(class=".no-js")
     script(src="static/js/bundle.js")
   body
     block content
+
+
