--- a/src/jade/sub/content.jade
+++ b/src/jade/sub/content.jade
@@ -3,3 +3,6 @@ extends ../layout.jade
 
 block content
 	h1 Play that sweet music.
+	
+	button.iterate(style="height:50px;width:100px;", onclick="loop()")
+		p On
