--- a/src/jade/layout.jade
+++ b/src/jade/layout.jade
@@ -1,12 +1,13 @@
 doctype
 html(class=".no-js")
   head
-    link(rel="include style.css", href="static/css/style.css")
+    link(rel="stylesheet", href="assets/css/style.css")
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title
     meta(name='description', content='Emergent System project')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    link()
     script(src="static/js/bundle.js")
   body
     block content
