--- a/src/jade/sub/content.jade
+++ b/src/jade/sub/content.jade
@@ -4,5 +4,4 @@ extends ../layout.jade
 block content
 	h1 Play that sweet music.
 	
-	button.iterate(style="height:50px;width:100px;", onclick="loop()")
-		p On
+	button.iterate(style="height:50px;width:100px;", onclick="loop()") On
